add 404 page and change index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     <!-- <link href="src/styles.css" rel="stylesheet" /> -->
     <link rel="stylesheet" href="src/styles.css" />
     <title>Relationship Management System</title>
+
+    <script type="text/javascript">
+      (function (l) {
+        if (l.search[1] === "/") {
+          var decoded = l.search
+            .slice(1)
+            .split("&")
+            .map(function (s) {
+              return s.replace(/~and~/g, "&");
+            })
+            .join("?");
+          window.history.replaceState(
+            null,
+            null,
+            l.pathname.slice(0, -1) + decoded + l.hash,
+          );
+        }
+      })(window.location);
+    </script>
   </head>
   <body>
     <div id="root"></div>
